added fetch data, loader, error, no-data

--- a/src/modules/Opportunity/components/CollaboratorsPositions/styles.module.scss
+++ b/src/modules/Opportunity/components/CollaboratorsPositions/styles.module.scss
@@ -5,3 +5,13 @@
   justify-content: center;
   margin-top: 20px;
 }
+
+.image {
+  height: 800px;
+
+  & img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
