--- a/src/components/Loader/styles.module.scss
+++ b/src/components/Loader/styles.module.scss
@@ -1,6 +1,6 @@
 ﻿.loader__wrapper {
   z-index: 1000;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #ffffff;
   position: absolute;
   top: 0;
   right: 0;
