--- a/src/modules/Opportunity/components/CollaboratorsCareer/styles.module.scss
+++ b/src/modules/Opportunity/components/CollaboratorsCareer/styles.module.scss
@@ -7,12 +7,6 @@
   margin-bottom: 20px;
 }
 
-.image {
-  height: 800px;
-
-  & img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-  }
+.text {
+  font-size: 18px;
 }
