--- a/src/modules/Opportunity/components/CollaboratorsPositions/components/Card/styles.module.scss
+++ b/src/modules/Opportunity/components/CollaboratorsPositions/components/Card/styles.module.scss
@@ -97,3 +97,13 @@
     overflow: hidden;
   }
 }
+
+.image {
+  height: 800px;
+
+  & img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
