--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -17,7 +17,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     max-height: 80vh;
-    max-width: 800px;
+    max-width: 1000px;
     width: 95%;
     padding: 40px 50px;
     display: flex;
@@ -49,7 +49,6 @@
     background-color: rgba(255, 255, 255, 1);
     z-index: 1000;
     padding-bottom: 20px;
-    // overflow-y: hidden;
   }
 
   &__body {
@@ -58,11 +57,11 @@
   }
 
   &__button-close {
-    flex: 0 0 1.25rem;
+    flex: 0 0 22px;
     position: relative;
     display: block;
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 22px;
+    height: 22px;
     padding: 0;
     background-color: transparent;
     background-repeat: no-repeat;
@@ -78,7 +77,7 @@
     transition-delay: 0s;
     outline: 0 !important;
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 10 10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.209209 0.209209C0.488155 -0.0697365 0.940416 -0.0697365 1.21936 0.209209L5 3.98985L8.78064 0.209209C9.05958 -0.0697365 9.51184 -0.0697365 9.79079 0.209209C10.0697 0.488155 10.0697 0.940416 9.79079 1.21936L6.01015 5L9.79079 8.78064C10.0697 9.05958 10.0697 9.51184 9.79079 9.79079C9.51184 10.0697 9.05958 10.0697 8.78064 9.79079L5 6.01015L1.21936 9.79079C0.940416 10.0697 0.488155 10.0697 0.209209 9.79079C-0.0697365 9.51184 -0.0697365 9.05958 0.209209 8.78064L3.98985 5L0.209209 1.21936C-0.0697365 0.940416 -0.0697365 0.488155 0.209209 0.209209Z'/%3E%3C/svg%3E%0A");
-    background-size: 0.75rem;
+    background-size: 14px;
     cursor: pointer;
 
     &:hover,
