--- a/src/modules/Opportunity/components/CollaboratorsPositions/components/Card/styles.module.scss
+++ b/src/modules/Opportunity/components/CollaboratorsPositions/components/Card/styles.module.scss
@@ -99,11 +99,13 @@
 }
 
 .image {
-  height: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   & img {
-    height: 100%;
-    width: 100%;
+    display: block;
+    max-width: 100%;
     object-fit: cover;
   }
 }
