--- a/src/modules/Opportunity/components/CollaboratorsCareer/components/Card/styles.module.scss
+++ b/src/modules/Opportunity/components/CollaboratorsCareer/components/Card/styles.module.scss
@@ -8,8 +8,8 @@
   padding: 8px;
   background: linear-gradient(
     90deg,
-    rgba(12, 192, 223, 1) 0%,
-    rgba(255, 222, 89, 1) 34%,
+    rgb(250, 234, 167) 0%,
+    rgb(253, 225, 113) 34%,
     rgba(255, 222, 89, 1) 100%
   );
   cursor: pointer;
