--- a/src/modules/Opportunity/components/CollaboratorsPositions/components/Card/styles.module.scss
+++ b/src/modules/Opportunity/components/CollaboratorsPositions/components/Card/styles.module.scss
@@ -80,13 +80,15 @@
   }
 
   &__desc {
+    padding-top: 4px;
     font-size: 14px;
-    height: 40px;
+    height: 45px;
+    line-height: 14px;
     text-align: center;
     color: #000000;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
   }
